# incremental-copying-gc

./: CMakeLists.txt  build.sh  c_static_assert.h  incremental_gc.c  incremental_gc.h
test/: CMakeLists.txt  alloc_test.c  full_test.c  incremental_gc_test.c  incremental_gc_test_.c  init_test.c
test/support/: CMakeLists.txt  test_support.c  test_support.h
